[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "waves"
authors = [
    {name = "Kyle Brindley", email = "kbrindley@lanl.gov"},
    {name = "Prabhu Khalsa", email = "pkhalsa@lanl.gov"},
    {name = "Thomas Roberts", email = "tproberts@lanl.gov"},
    {name = "Sergio Cordova", email = "sergioc@lanl.gov"},
    {name = "Matthew Fister", email = "mwfister@lanl.gov"},
    {name = "Scott Ouellette", email = "souellette@lanl.gov"}
]
description = "WAVES Analysis for Verified Engineering Simulations"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]
dependencies = [
    "h5netcdf",
    "h5py",
    "matplotlib-base",
    "networkx",
    "numpy",
    "pyyaml",
    "salib >=1",
    "scipy >=1.7",
    "scons",
    "xarray"
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
odb_extract = "waves._abaqus.odb_extract:main"
waves = "waves._main:main"

[project.urls]
homepage = "https://github.com/lanl/waves"
documentation = "https://github.com/lanl/waves"
repository = "https://github.com/lanl/waves"
changelog = "https://lanl.github.io/waves/changelog.html"

[tool.setuptools_scm]
write_to = "waves/_version.py"

[tool.pytest.ini_options]
markers = [
    "systemtest: marks system tests, e.g. the tutorials",
    # FIXME: Trace the source of interference between the builder tests and the find_program tests
    # Remove tag and use of tag when fixed.
    "programoperations: marks tests that don't play nicely with SCons internal API usage"
]
addopts = "--ignore='waves/modsim_template/' --ignore='modsim_template/' --ignore='waves/modsim_template_2/' --ignore='modsim_template_2/' --ignore='waves/tutorials/' --ignore='tutorials/' --tb=long --showlocals --failed-first --strict-markers -m 'not systemtest'"

[tool.mypy]
disable_error_code = "import-untyped"
exclude = [
    "modsim_template",
    "tutorials",
    "tests"
]
packages = ["waves"]
